# scored_communities_api

./: .gitignore  CMakeLists.txt  README.md
examples/: iterator_example.cpp  login_view_user.cpp  print_json_no_login.cpp  two_pages_no_login.cpp  view_user_no_login.cpp
src/: scoredapi.cpp  scoredapi.hpp
